# fogwall

./: README.md  meson.build
scripts/: embed.py
src/: audio.c  audio.h  egl.c  egl.h  hypr.c  hypr.h  main.c  shader.c  shader.h  wayland.c  wayland.h
src/shaders/: fog.frag  quad.vert
